Fix background styling on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,17 @@
 
 html,
 body {
+  margin: 0;
   height: 100%;
 }
 
-body {
-  background-image: url("/background.png");
+.background {
+  background: url("/background.png") no-repeat center center;
   background-size: cover;
-  background-position: center;
-  margin: 0;
-  width: 100%;
+  height: 100vh;
+  left: 0;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  z-index: -1000;
 }
